--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -56,13 +56,13 @@ jobs:
       run: mdbook build
 
     - name: "Upload Pages artifact"
-      if: github.ref == 'refs/heads/master'
+      if: github.ref == 'refs/heads/main'
       uses: actions/upload-pages-artifact@v3
       with:
         path: book
 
     - name: "Deploy to GitHub Pages"
-      if: github.ref == 'refs/heads/master'
+      if: github.ref == 'refs/heads/main'
       uses: actions/deploy-pages@v4
 
 
